name:           himp
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       haskell import guesser
build-type:     Simple
build-depends:  FUtil, HSH, base, containers, directory, haskell-src-exts,
                process

executable:     himp
main-is:        Main.hs
hs-source-dirs: src
