name:           himportant
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       haskell import guesser
build-type:     Simple
build-depends:  base, haskell98, containers, process

executable:     himportant
main-is:        Main.hs
hs-source-dirs: src

executable:     hsig
main-is:        Hsig.hs
hs-source-dirs: src
